nixidy/generated/prod/promptfoo/Deployment-promptfoo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    reloader.stakater.com/auto: "true"
  labels:
    app.kubernetes.io/controller: promptfoo
    app.kubernetes.io/instance: promptfoo
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: promptfoo
  name: promptfoo
  namespace: ai
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/controller: promptfoo
      app.kubernetes.io/instance: promptfoo
      app.kubernetes.io/name: promptfoo
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/controller: promptfoo
        app.kubernetes.io/instance: promptfoo
        app.kubernetes.io/name: promptfoo
    spec:
      automountServiceAccountToken: false
      containers:
        - args:
            - share
            - --yes
          image: ghcr.io/promptfoo/promptfoo:latest@sha256:3001a2cdc6a1cf42b814dd24d59e543cae602ddf01b4ee073db6ce76c6469a72
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 3000
            timeoutSeconds: 1
          name: promptfoo
          ports:
            - containerPort: 3000
              name: http
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 3000
            timeoutSeconds: 1
          startupProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 3000
            timeoutSeconds: 1
          volumeMounts:
            - mountPath: /root/.promptfoo
              name: data
      dnsPolicy: ClusterFirst
      enableServiceLinks: false
      hostIPC: false
      hostNetwork: false
      hostPID: false
      serviceAccountName: promptfoo
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: promptfoo
