nixidy/generated/prod/promptfoo/Service-promptfoo.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: promptfoo
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: promptfoo
    app.kubernetes.io/service: promptfoo
  name: promptfoo
  namespace: ai
spec:
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app.kubernetes.io/controller: promptfoo
    app.kubernetes.io/instance: promptfoo
    app.kubernetes.io/name: promptfoo
  type: ClusterIP
