nixidy/generated/prod/promptfoo/HTTPRoute-promptfoo.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: promptfoo
  namespace: ai
spec:
  hostnames:
    - promptfoo.trdos.me
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: oauth2-proxy
          namespace: identity
          port: 4180
